# notemine

./: .gitignore  README.md  config.toml  main.py  pull_ollama_models.sh  pyproject.toml
data/: grading_spec.md  ground_truth.yaml  index_ner_tags_summary.md  long_ai_gezondheidszorg_oncologie_onderzoek_nl.md  long_ai_healthcare_oncology_research_en.md  long_interview_climate_scientist_sea_level_en.md  long_interview_klimaatwetenschapper_zeespiegel_nl.md  long_opinie_eu_ai_act_digitaal_beleid_nl.md  long_opinion_eu_ai_act_digital_policy_en.md  medium_climate_blog_paris_agreement_en.md  medium_geschiedenis_gouden_eeuw_nl.md  medium_history_dutch_golden_age_en.md  medium_klimaat_blog_parijs_akkoord_nl.md  medium_reisgids_amsterdam_nl.md  medium_travel_guide_amsterdam_en.md  short_recensie_samsung_galaxy_s25_ultra_nl.md  short_recept_stamppot_nl.md  short_recipe_dutch_stamppot_en.md  short_review_samsung_galaxy_s25_ultra_en.md  short_sport_nieuws_ajax_champions_league_nl.md  short_sports_news_ajax_champions_league_en.md  short_tech_news_openai_announcement_en.md  short_tech_nieuws_openai_aankondiging_nl.md
data/model_eval_docs/: 20241217_192002_Turkistan Islamic Party - Wikiwand.md  20241224_232156_Debunking the Myths About Seed Oils.md  (+6 more)
data/results/: grading_spec.md  (+33 more)
docs/: plan_1.md  scope.md
notebooks/: 01_ner.ipynb  02_tags.ipynb  03_summary.ipynb  04_model_eval.ipynb  05_model_eval_viz.ipynb  05_model_eval_viz_haiku_4.5.ipynb  05_model_eval_viz_opus_4.6.ipynb  05_model_eval_viz_sonnet_4.6.ipynb  06_model_eval_inspect.ipynb
prompts/: ner.txt  summary.txt  tags.txt
(+84 files in other folders)
